--- a/public/home.html
+++ b/public/home.html
@@ -59,7 +59,7 @@
 
                 <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl hover:bg-primary overflow-hidden duration-300">
                     <a id="home" class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-16 text-center" href="#">HOME</a>
-                    <a id="homeIcon" class="flex justify-center items-center group-hover:bg-primary bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50" href="#">
+                    <a id="homeIcon" class="flex justify-center items-center bg-primary group-hover:bg-primary bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50" href="#">
                         <i class="fa fa-home"></i>
                     </a>
                 </div>
