adding next page

--- a/public/home.html
+++ b/public/home.html
@@ -10,7 +10,7 @@
 
   <title>ALONE PORTFOLIO</title>
 </head>
-<body class="bg-[#131417] text-white font-poppins ">
+<body class="bg-[#131417] text-white  ">
 
     
     <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50"></div>
@@ -39,8 +39,8 @@
                 <span class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
                 <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
             </h1>
-            <p class="py-3 leading-loose w-[60%] text-xs">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
-            <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10" href="#">
+            <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+            <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="#">
                 MORE ABOUT ME
             
                 <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
@@ -70,8 +70,8 @@
                     </a>
                 </div>
                 <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl hover:bg-primary overflow-hidden duration-300">
-                    <a id="home" class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-[90px] text-center" href="#">PROJECTS</a>
-                    <a id="homeIcon" class="flex justify-center items-center group-hover:bg-primary bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50" href="#">
+                    <a id="home" class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-[90px] text-center" href="projects.html">PROJECTS</a>
+                    <a id="homeIcon" class="flex justify-center items-center group-hover:bg-primary bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50" href="projects.html">
                         <i class="fa fa-briefcase"></i>
                     </a>
                 </div>
@@ -108,7 +108,7 @@
                 </a>
             </div>
             <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl overflow-hidden duration-300">
-                <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50 group-hover:bg-primary" href="#">
+                <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] rounded-full duration-100 size-[50px] text-[20px] z-50 group-hover:bg-primary" href="projects.html">
                     <i class="fa fa-briefcase"></i>
                 </a>
             </div>
