--- a/public/projects.html
+++ b/public/projects.html
@@ -26,7 +26,7 @@
 
     <div class="container mx-auto flex flex-col  lg:pl-16 xl::pl-20">
 
-    <div class="flex justify-center items-center">
+    <div class="flex justify-center items-center pt-10">
         <div class="relative pb-26 text-center">
             <p id="myProjects" class="absolute text-4xl md:text-5xl top-[19px] md:top-5 left-1/2 flex gap-x-2 transform -translate-x-1/2">
                 <span class="text-white">Best</span>
@@ -190,7 +190,7 @@
         </div>
     </div>
     
-        <div data-aos="fade-up" class="grid md:grid-cols-2 justify-center items-center lg:grid-cols-3 gap-y-20 pt-16">
+        <div data-aos="fade-up" class="grid md:grid-cols-2 justify-center items-center lg:grid-cols-3 gap-y-20 pt-10 pb-10">
         
             <div class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
                 <div class="absolute -left-5 -top-10 duration-300">
