--- a/public/projects.html
+++ b/public/projects.html
@@ -22,6 +22,7 @@
 
 </style>
 <body class="bg-[#131417]">
+    
 
     <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50"></div>
 
@@ -358,8 +359,8 @@
                 </a>
             </div>
             <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl hover:bg-primary overflow-hidden duration-300">
-                <a id="home" class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-16 text-center" href="#">ABOUT</a>
-                <a id="homeIcon" class="flex justify-center items-center group-hover:bg-primary bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50" href="#">
+                <a id="home" class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-16 text-center" href="about.html">ABOUT</a>
+                <a id="homeIcon" class="flex justify-center items-center group-hover:bg-primary bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50" href="about.html">
                     <i class="fa fa-user"></i>
                 </a>
             </div>
@@ -395,7 +396,7 @@
                 </a>
             </div>
             <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl overflow-hidden duration-300">
-                <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50 group-hover:bg-primary" href="#">
+                <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] rounded-full  duration-100 size-[50px] text-[20px] z-50 group-hover:bg-primary" href="about.html">
                     <i class="fa fa-user"></i>
                 </a>
             </div>
