--- a/public/about.html
+++ b/public/about.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="../aos/aos.css">
   </head>
 
   <style>
@@ -75,16 +75,16 @@
   </style>
 
   <body class="bg-[#131417]">
-    <div
-      id="anim"
-      class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50"
-    ></div>
+
+    <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50"></div>
 
     <div class="container mx-auto pt-10">
-      <div class="relative pb-36 text-center">
+      <div data-aos="flip-left"
+      data-aos-easing="ease-out-cubic"
+      data-aos-duration="2000" class="relative pb-36 text-center">
         <p
           id="myProjects"
-          class="absolute text-4xl md:text-5xl top-[19px] md:top-7 left-1/2 flex gap-x-2 transform -translate-x-1/2"
+          class="absolute text-4xl md:text-5xl top-[19px] md:top-8 left-1/2 flex gap-x-2 transform -translate-x-1/2"
         >
           <span class="text-white">About</span>
           <span class="text-primary">Me</span>
@@ -100,7 +100,9 @@
       <!-- about me sections -->
 
       <!-- title -->
-      <h1 class="font-bold text-center lg:text-left text-2xl text-white pb-7 lg:pb-0 uppercase px-10">
+      <h1 data-aos="fade-down"
+      data-aos-easing="linear"
+      data-aos-duration="800" class="font-bold text-center lg:text-left text-2xl text-white pb-7 lg:pb-0 uppercase px-10">
         personal infos
       </h1>
 
@@ -108,7 +110,10 @@
         <!-- personal infos -->
         <div class="flex md:flex-row flex-col gap-x-20 justify-center items-center px-10">
           <!-- first UL -->
-          <ul class="text-left w-full space-y-4 pb-10">
+          <ul data-aos="fade-left"
+          data-aos-anchor="#example-anchor"
+          data-aos-offset="0"
+          data-aos-duration="1200" class="text-left w-full space-y-4 pb-10 md:pb-0">
             <li class="text-gray-300">
               First name: <span class="text-white">Mobin</span>
             </li>
@@ -126,28 +131,34 @@
             </li>
           </ul>
           <!-- second UL -->
-          <ul class="space-y-4">
-            <li class="text-gray-300">
+          <ul data-aos="fade-left"
+          data-aos-anchor="#example-anchor"
+          data-aos-offset="0"
+          data-aos-duration="1200" class="space-y-4">
+            <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
               Last name: <span class="text-white">Rezaee</span>
             </li>
-            <li class="text-gray-300">
+            <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
               Nationality: <span class="text-white">iranian</span>
             </li>
-            <li class="text-gray-300">
-              Address <span class="text-white">kermanshah</span>
+            <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
+              Address: <span class="text-white">kermanshah</span>
             </li>
-            <li class="text-gray-300">
-              Email:
+            <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
+              <span>Email:</span>
               <span class="text-white">mohamadmobinrezaee@gmail.com</span>
             </li>
-            <li class="text-gray-300">
+            <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
               Languages: <span class="text-white">Kurdish, fasri, english</span>
             </li>
           </ul>
         </div>
         <!-- contents -->
         <div class="grid grid-cols-2 lg:mr-24 pt-16 lg:pt-0">
-          <div class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
+          <div data-aos="fade-right"
+          data-aos-offset="0"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
             <!-- title -->
             <p>HTML</p>
             <div class="circle">
@@ -156,7 +167,10 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
+          <div data-aos="fade-right"
+          data-aos-offset="0"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
             <!-- title -->
             <p>CSS</p>
             <div class="circle">
@@ -165,7 +179,10 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
+          <div data-aos="fade-right"
+          data-aos-offset="0"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
             <!-- title -->
             <p>TailwindCSS</p>
             <div class="circle">
@@ -174,7 +191,10 @@
               </div>
             </div>
           </div>
-          <div class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
+          <div data-aos="fade-right"
+          data-aos-offset="0"
+          data-aos-easing="ease-in-sine"
+          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
             <!-- title -->
             <p>JAVASCRIPT</p>
             <div class="outer-circle">
@@ -352,5 +372,9 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="../aos/aos.js"></script>
+    <script>
+        AOS.init()
+    </script>
   </body>
 </html>
