--- a/public/about.html
+++ b/public/about.html
@@ -72,6 +72,11 @@
       color: white;
       position: absolute;
     }
+    /*  */
+    /*  */
+    html,body{
+        overflow-x: hidden;
+    }
   </style>
 
   <body class="bg-[#131417]">
