second update for home

--- a/public/home.html
+++ b/public/home.html
@@ -40,7 +40,7 @@
                 <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
             </h1>
             <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
-            <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="#">
+            <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
                 MORE ABOUT ME
             
                 <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
