--- a/public/about.html
+++ b/public/about.html
@@ -273,13 +273,13 @@
           <a
             id="home"
             class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-16 text-center"
-            href="#"
+            href="tools.html"
             >TOOLS</a
           >
           <a
             id="homeIcon"
             class="flex justify-center items-center group-hover:bg-primary bg-[#2E2C29] rounded-full duration-100 size-[50px] text-[20px] z-50"
-            href="#"
+            href="tools.html"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -349,7 +349,7 @@
           <a
             id="homeIcon"
             class="flex justify-center items-center bg-[#2E2C29] rounded-full duration-100 size-[50px] text-[20px] z-50 group-hover:bg-primary"
-            href="#"
+            href="tools.html"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
