adding some details

--- a/public/home.html
+++ b/public/home.html
@@ -26,7 +26,7 @@
         data-aos-anchor-placement="top-bottom"
         data-aos-offset="0"
         data-aos-duration="1300"
-        class="rounded-full md:rounded-3xl overflow-hidden md:fixed md:left-[5%] w-[200px] md:w-[30%] h-[200px] md:h-[90%] top-[5%] shadow-md">
+        class=" rounded-3xl overflow-hidden md:fixed md:left-[5%] w-[200px] md:w-[30%] h-[200px] md:h-[90%] top-[5%] shadow-md ring-[1px] ring-[#3a3a3d]">
             <img class="size-full object-cover shadow-md" src="../image/dark.jpg" alt="">s
         </div>
 
@@ -55,7 +55,7 @@
 
         <!-- Action Bar -->
         <div class="md:fixed hidden md:flex justify-end items-center md:w-52 md:h-screen h-20 w-full right-5 top-0">
-            <ul class="flex md:flex-col justify-end items-end gap-y-4">
+            <ul class="flex md:flex-col justify-end items-end gap-y-4 font-poppins">
 
                 <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl hover:bg-primary overflow-hidden duration-300">
                     <a id="home" class="py-[13px] group-hover:opacity-100 pl-3 opacity-0 duration-150 w-0 group-hover:w-16 text-center" href="#">HOME</a>
@@ -94,7 +94,7 @@
 
     </div>
 
-    <div class="fixed bg-[#2B2A2A] md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50">
+    <div class="fixed bg-[#2B2A2A] md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl">
         <ul class="flex md:flex-col justify-end items-center gap-x-5">
 
             <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl overflow-hidden duration-300">
