--- a/public/projects.html
+++ b/public/projects.html
@@ -387,7 +387,7 @@
 
 
     <!-- mobile Nav menu -->
-    <div class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50">
+    <div class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl">
         <ul class="flex md:flex-col justify-end items-center gap-x-5">
 
             <div class="flex justify-end w-fit items-center group rounded-2xl hover:rounded-br-3xl hover:rounded-tr-3xl overflow-hidden duration-300">
