--- a/public/about.html
+++ b/public/about.html
@@ -213,7 +213,7 @@
     </div>
 
     <div
-      class="md:fixed hidden md:flex justify-end items-center md:w-52 md:h-screen h-20 w-full right-5 top-0"
+      class="md:fixed hidden md:flex justify-end items-center md:w-52 md:h-screen h-20 w-full right-5 top-0 font-poppins"
     >
       <ul class="flex md:flex-col justify-end items-end gap-y-4 text-white">
         <div
@@ -307,7 +307,7 @@
     </div>
 
     <div
-      class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50"
+      class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl"
     >
       <ul class="flex md:flex-col justify-end items-center gap-x-5">
         <div
