--- a/public/about.html
+++ b/public/about.html
@@ -107,7 +107,7 @@
       <!-- title -->
       <h1 data-aos="fade-down"
       data-aos-easing="linear"
-      data-aos-duration="800" class="font-bold text-center lg:text-left text-2xl text-white pb-7 lg:pb-0 uppercase px-10">
+      data-aos-duration="800" class="font-bold text-center lg:text-left text-2xl text-white pb-7 lg:pb-0 uppercase px-10 relative">
         personal infos
       </h1>
 
