--- a/public/about.html
+++ b/public/about.html
@@ -86,7 +86,7 @@
     <div class="container mx-auto pt-10">
       <div data-aos="flip-left"
       data-aos-easing="ease-out-cubic"
-      data-aos-duration="2000" class="relative pb-36 text-center">
+      data-aos-duration="2000" class="relative md:pb-36 pb-[100px] text-center">
         <p
           id="myProjects"
           class="absolute text-4xl md:text-5xl top-[19px] md:top-8 left-1/2 flex gap-x-2 transform -translate-x-1/2"
