--- a/public/home.html
+++ b/public/home.html
@@ -36,7 +36,7 @@
         data-aos-offset="0"
         data-aos-duration="1300" class="flex flex-col h-full pt-16 items-center md:justify-center md:fixed size-[50%] gap-x-10 left-[30%] top-[100px] md:-top-[10px] w-full md:w-fit pb-36">
             <h1 class="text-left leading-tight">
-                <span class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
+                <span id="mobin" class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
                 <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
             </h1>
             <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
