--- a/public/projects.html
+++ b/public/projects.html
@@ -24,7 +24,12 @@
 <body class="bg-[#131417]">
     
 
-    <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50"></div>
+    <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50 rounded-tr-[30px] rounded-tl-[30px] flex justify-center items-center">
+        <p id="loading" class="text-primary text-5xl font-poppins flex justify-center items-center gap-x-4">LOADING<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-14 animate-spin">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
+          </svg>
+        </p>
+    </div>
 
     <div class="container mx-auto flex flex-col  lg:pl-16 xl::pl-20">
 
