--- a/public/about.html
+++ b/public/about.html
@@ -224,7 +224,7 @@
         <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] relative z-50 shadow-xs shadow-primary" href="home.html">
             <i class="fa fa-home"></i>
         </a>
-        <a id="homeIcon" class="flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="about.html">
+        <a id="homeIcon" class="flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50 " href="about.html">
             <i class="fa fa-user"></i>
         </a>
         <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
