--- a/public/about.html
+++ b/public/about.html
@@ -116,9 +116,9 @@
         personal infos
       </h1>
 
-      <div class="text-white font-poppins flex flex-col lg:flex-row justify-between items-center pb-32">
+      <div class="text-white font-poppins flex flex-col lg:flex-row justify-between items-center">
         <!-- personal infos -->
-        <div class="flex md:flex-row flex-col gap-x-20 justify-center items-center px-10">
+        <div class="flex md:flex-row flex-col gap-x-20 justify-center items-center px-10 pt-0 md:pt-5">
           <!-- first UL -->
           <ul data-aos="fade-left"
           data-aos-anchor="#example-anchor"
@@ -162,57 +162,6 @@
               Languages: <span class="text-white">Kurdish, fasri, english</span>
             </li>
           </ul>
-        </div>
-        <!-- contents -->
-        <div class="grid grid-cols-2 lg:mr-24 pt-16 lg:pt-0">
-          <div data-aos="fade-right"
-          data-aos-offset="0"
-          data-aos-easing="ease-in-sine"
-          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
-            <!-- title -->
-            <p>HTML</p>
-            <div class="circle">
-              <div class="inner-circle">
-                <span class="progress-text">95%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="fade-right"
-          data-aos-offset="0"
-          data-aos-easing="ease-in-sine"
-          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
-            <!-- title -->
-            <p>CSS</p>
-            <div class="circle">
-              <div class="inner-circle">
-                <span class="progress-text">95%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="fade-right"
-          data-aos-offset="0"
-          data-aos-easing="ease-in-sine"
-          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
-            <!-- title -->
-            <p>TailwindCSS</p>
-            <div class="circle">
-              <div class="inner-circle">
-                <span class="progress-text">95%</span>
-              </div>
-            </div>
-          </div>
-          <div data-aos="fade-right"
-          data-aos-offset="0"
-          data-aos-easing="ease-in-sine"
-          data-aos-duration="1000" class="flex flex-col size-36 rounded-2xl overflow-hidden justify-center items-center gap-y-3">
-            <!-- title -->
-            <p>JAVASCRIPT</p>
-            <div class="outer-circle">
-                <div class="inner-circle">
-                    <span class="percentage-text">65%</span>
-                </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
