--- a/public/projects.html
+++ b/public/projects.html
@@ -28,7 +28,7 @@ body,html{
     
 
     <!-- circle -->
-    <div class="flex justify-center items-center">
+    <div class="flex justify-center items-center animate-pulse">
         <div class="absolute size-[500px] bg-primary
       blur-[200px] md:opacity-100 opacity-70 top-[40%] overflow-hidden"></div>
     </div>
