--- a/public/home.html
+++ b/public/home.html
@@ -10,7 +10,7 @@
 
   <title>ALONE PORTFOLIO</title>
 </head>
-<body class="bg-[#131417] text-white relative">
+<body class="bg-[#131417] text-white relative h-screen">
     
     <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50 rounded-tr-[30px] rounded-tl-[30px] flex justify-center items-center">
         <p id="loading" class="text-primary text-5xl font-poppins flex justify-center items-center gap-x-4">LOADING<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-14 animate-spin">
