--- a/public/about.html
+++ b/public/about.html
@@ -10,6 +10,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="../aos/aos.css">
+    <link rel="stylesheet" href="Night & Day/theme.css">
   </head>
 
   <style>
@@ -81,6 +82,22 @@
 
   <body class="bg-[#131417]">
 
+
+    <!-- theme Button -->
+    <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-12 right-5 top-5 z-50 /// flex justify-center items-center font-bold text-white">
+
+        <!-- light -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 lightSvg">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+          </svg>
+        <!-- dark -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hidden darkSvg">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+          </svg>
+          
+
+     </button>
+
     <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50 rounded-tr-[30px] rounded-tl-[30px] flex justify-center items-center overflow-hidden">
         <p id="loading" class="text-primary text-5xl font-poppins flex justify-center items-center gap-x-4">LOADING<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-14 animate-spin">
             <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
@@ -118,26 +135,26 @@
 
       <div class="text-white font-poppins flex flex-col lg:flex-row justify-between items-center">
         <!-- personal infos -->
-        <div class="flex md:flex-row flex-col gap-x-20 justify-center items-center px-10 pt-0 md:pt-5">
+        <div class=" flex md:flex-row flex-col gap-x-20 justify-center items-center px-10 pt-0 md:pt-5">
           <!-- first UL -->
           <ul data-aos="fade-left"
           data-aos-anchor="#example-anchor"
           data-aos-offset="0"
           data-aos-duration="1200" class="text-left w-full space-y-4 pb-10 md:pb-0">
             <li class="text-gray-300">
-              First name: <span class="text-white">Mobin</span>
+              First name: <span class="text-white info">Mobin</span>
             </li>
             <li class="text-gray-300">
-              Age: <span class="text-white">18 Years</span>
+              Age: <span class="text-white info">18 Years</span>
             </li>
             <li class="text-gray-300">
               Freelance <span class="text-[#5BE85B]">Available</span>
             </li>
             <li class="text-gray-300">
-              Phone: <span class="text-white">+98 933 136 8903</span>
+              Phone: <span class="text-white info">+98 933 136 8903</span>
             </li>
             <li class="text-gray-300">
-              Skype: <span class="text-white">steve.milner</span>
+              Skype: <span class="text-white info">steve.milner</span>
             </li>
           </ul>
           <!-- second UL -->
@@ -146,20 +163,20 @@
           data-aos-offset="0"
           data-aos-duration="1200" class="space-y-4">
             <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
-              Last name: <span class="text-white">Rezaee</span>
+              Last name: <span class="text-white info">Rezaee</span>
             </li>
             <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
-              Nationality: <span class="text-white">iranian</span>
+              Nationality: <span class="text-white info">iranian</span>
             </li>
             <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
-              Address: <span class="text-white">kermanshah</span>
+              Address: <span class="text-white info">kermanshah</span>
             </li>
             <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
               <span>Email:</span>
-              <span class="text-white">mohamadmobinrezaee@gmail.com</span>
+              <span class="text-white info">mohamadmobinrezaee@gmail.com</span>
             </li>
             <li class="text-gray-300 flex gap-x-2 whitespace-nowrap">
-              Languages: <span class="text-white">Kurdish, fasri, english</span>
+              Languages: <span class="text-white info">Kurdish, fasri, english</span>
             </li>
           </ul>
         </div>
@@ -173,7 +190,7 @@
         <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] relative z-50 shadow-xs shadow-primary" href="home.html">
             <i class="fa fa-home"></i>
         </a>
-        <a id="homeIcon" class="flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50 " href="about.html">
+        <a id="homeIcon" class="secondAboutIcon flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50 " href="about.html">
             <i class="fa fa-user"></i>
         </a>
         <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
@@ -193,12 +210,12 @@
     <div
       class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl"
     >
-    <ul class="flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
+    <ul class="aboutSecondNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
         <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] relative z-50 shadow-xs shadow-primary" href="home.html">
             <i class="fa fa-home"></i>
         </a>
-        <a id="homeIcon" class="flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50 " href="about.html">
+        <a id="homeIcon" class="secondAboutIcon flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50 " href="about.html">
             <i class="fa fa-user"></i>
         </a>
         <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
@@ -215,7 +232,7 @@
     </ul>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script src="../aos/aos.js"></script>
     <script>
         AOS.init()
