--- a/public/tools.html
+++ b/public/tools.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../aos/aos.css">
     <link rel="stylesheet" href="../src/output.css">
+    <link rel="stylesheet" href="Night & Day/theme.css">
 
     <title>Tools</title>
 
@@ -77,7 +78,22 @@
     </style>
 </head>
 <body class="bg-[#131417]">
-     
+
+     <!-- message -->
+     <div id="message" class="absolute h-screen w-screen bg-red-400 z-50 flex justify-center items-center text-3xl font-vazir text-center">لایت مود و دارک مود این صفحه هنوز تکمیل نشده است</div>
+
+     <!-- theme Button -->
+     <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-12 right-5 top-5 z-50 /// flex justify-center items-center font-bold text-white">
+
+        <!-- light -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 lightSvg">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+          </svg>
+        <!-- dark -->
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hidden darkSvg">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+          </svg>
+     </button>
 
     <!-- loading menu -->
     <div id="anim" class="bg-[#222222] absolute h-full duration-400 w-full bottom-0 z-50 rounded-tr-[30px] rounded-tl-[30px] flex justify-center items-center overflow-hidden">
@@ -211,6 +227,8 @@
     <script>
         AOS.init()
     </script>
-    <script src="script.js"></script>
+
+    <script type="module" src="script.js"></script>
+
 </body>
 </html>
