--- a/public/about.html
+++ b/public/about.html
@@ -113,7 +113,7 @@
           id="myProjects"
           class="absolute text-4xl md:text-5xl top-[19px] md:top-8 left-1/2 flex gap-x-2 transform -translate-x-1/2"
         >
-          <span class="text-white">About</span>
+          <span class="text-white aboutParagraph">About</span>
           <span class="text-primary">Me</span>
         </p>
         <p
@@ -208,7 +208,7 @@
     </div>
 
     <div
-      class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl"
+      class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl"
     >
     <ul class="aboutSecondNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
