--- a/public/tools.html
+++ b/public/tools.html
@@ -79,9 +79,6 @@
 </head>
 <body class="bg-[#131417]">
 
-     <!-- message -->
-     <div id="message" class="absolute h-screen w-screen bg-red-400 z-50 flex justify-center items-center text-3xl font-vazir text-center">لایت مود و دارک مود این صفحه هنوز تکمیل نشده است</div>
-
      <!-- theme Button -->
      <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-12 right-5 top-5 z-50 /// flex justify-center items-center font-bold text-white">
 
@@ -111,7 +108,7 @@
     data-aos-duration="2000" class="flex justify-center items-center">
         <div class="relative pb-26 text-center">
             <p id="myProjects" class="absolute text-4xl md:text-5xl top-[19px] md:top-8 left-1/2 flex gap-x-2 transform -translate-x-1/2">
-                <span style="font-weight: 900;" class="text-white">My</span>
+                <span style="font-weight: 900;" class="text-white myParagraph">My</span>
                 <span style="font-weight: 900;" class="text-primary">Tools</span>
             </p>
             <p id="myWorks" class="absolute text-7xl md:text-8xl text-[#222222] -z-10 left-1/2 transform -translate-x-1/2" style="font-weight: 900;">Utensils</p>
@@ -179,7 +176,7 @@
 
     <!-- nav menu for mobile -->
     <div class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl">
-        <ul class="flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
+        <ul class="toolsNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
             <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] rounded-2xl duration-100 size-[50px] text-[20px] relative z-50 shadow-xs shadow-primary" href="home.html">
                 <i class="fa fa-home"></i>
@@ -190,7 +187,7 @@
             <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
                 <i class="fa fa-briefcase"></i>
             </a>
-            <a id="homeIcon" class="flex justify-center items-center bg-primary hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50" href="tools.html">
+            <a id="homeIcon" class="toolsHomeIcon flex justify-center items-center bg-primary hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50" href="tools.html">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5">
                     <path fill-rule="evenodd" d="M12 6.75a5.25 5.25 0 0 1 6.775-5.025.75.75 0 0 1 .313 1.248l-3.32 3.319c.063.475.276.934.641 1.299.365.365.824.578 1.3.64l3.318-3.319a.75.75 0 0 1 1.248.313 5.25 5.25 0 0 1-5.472 6.756c-1.018-.086-1.87.1-2.309.634L7.344 21.3A3.298 3.298 0 1 1 2.7 16.657l8.684-7.151c.533-.44.72-1.291.634-2.309A5.342 5.342 0 0 1 12 6.75ZM4.117 19.125a.75.75 0 0 1 .75-.75h.008a.75.75 0 0 1 .75.75v.008a.75.75 0 0 1-.75.75h-.008a.75.75 0 0 1-.75-.75v-.008Z" clip-rule="evenodd"></path>
                     <path d="m10.076 8.64-2.201-2.2V4.874a.75.75 0 0 0-.364-.643l-3.75-2.25a.75.75 0 0 0-.916.113l-.75.75a.75.75 0 0 0-.113.916l2.25 3.75a.75.75 0 0 0 .643.364h1.564l2.062 2.062 1.575-1.297Z"></path>
@@ -213,7 +210,7 @@
                 <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
                     <i class="fa fa-briefcase"></i>
                 </a>
-                <a id="homeIcon" class="flex justify-center items-center bg-primary hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 " href="tools.html">
+                <a id="homeIcon" class="toolsHomeIcon flex justify-center items-center bg-primary hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 " href="tools.html">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5">
                         <path fill-rule="evenodd" d="M12 6.75a5.25 5.25 0 0 1 6.775-5.025.75.75 0 0 1 .313 1.248l-3.32 3.319c.063.475.276.934.641 1.299.365.365.824.578 1.3.64l3.318-3.319a.75.75 0 0 1 1.248.313 5.25 5.25 0 0 1-5.472 6.756c-1.018-.086-1.87.1-2.309.634L7.344 21.3A3.298 3.298 0 1 1 2.7 16.657l8.684-7.151c.533-.44.72-1.291.634-2.309A5.342 5.342 0 0 1 12 6.75ZM4.117 19.125a.75.75 0 0 1 .75-.75h.008a.75.75 0 0 1 .75.75v.008a.75.75 0 0 1-.75.75h-.008a.75.75 0 0 1-.75-.75v-.008Z" clip-rule="evenodd"></path>
                         <path d="m10.076 8.64-2.201-2.2V4.874a.75.75 0 0 0-.364-.643l-3.75-2.25a.75.75 0 0 0-.916.113l-.75.75a.75.75 0 0 0-.113.916l2.25 3.75a.75.75 0 0 0 .643.364h1.564l2.062 2.062 1.575-1.297Z"></path>
