--- a/public/projects.html
+++ b/public/projects.html
@@ -18,12 +18,10 @@
 }
 #myWorks{
     font-weight: 800;
-
 }
 
-
 </style>
-<body class="bg-[#131417] relative h-screen">
+<body class="bg-[#131417] relative h-screen overflow-x-hidden">
 
      <!-- theme Button -->
      <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-12 right-5 top-5 z-50 /// flex justify-center items-center font-bold text-white">
@@ -37,13 +35,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
           </svg>
      </button>
-
-    <!-- circle -->
-    <div class="flex justify-center items-center animate-pulse">
-        <div class="absolute size-[500px] bg-primary
-      blur-[200px] md:opacity-100 opacity-70 top-[40%] overflow-hidden"></div>
-    </div>
-
+     
     <div id="anim" class="bg-[#222222] absolute h-full w-full bottom-0 z-50 rounded-tr-[30px] rounded-tl-[30px] flex justify-center items-center">
         <p id="loading" class="text-primary text-5xl font-poppins flex justify-center items-center gap-x-4">LOADING<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-14 animate-spin">
             <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0 3.181 3.183a8.25 8.25 0 0 0 13.803-3.7M4.031 9.865a8.25 8.25 0 0 1 13.803-3.7l3.181 3.182m0-4.991v4.99" />
