--- a/public/tools.html
+++ b/public/tools.html
@@ -116,7 +116,7 @@
         </div>
 
         
-        <div class="flex text-white justify-center gap-x-5 pt-5 p-10 text-center">
+        <div class="flex text-white justify-center gap-x-5 pt-5 p-14 text-center">
             <div class="space-y-5">
             <div data-aos="fade-right" class="bg-[#131414] ring-1 ring-[#3a3a3d] sm:px-16 px-8 py-7 rounded-3xl"
                 data-aos-offset="0"
@@ -175,7 +175,7 @@
 
 
     <!-- nav menu for mobile -->
-    <div class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-50 rounded-tr-2xl rounded-tl-2xl">
+    <div class="fixed text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl">
         <ul class="toolsNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
             <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] rounded-2xl duration-100 size-[50px] text-[20px] relative z-50 shadow-xs shadow-primary" href="home.html">
