--- a/public/about.html
+++ b/public/about.html
@@ -208,7 +208,7 @@
     </div>
 
     <div
-      class="fixed bg-[#2B2A2A] text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl"
+      class="fixed text-white md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl"
     >
     <ul class="aboutSecondNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
