--- a/public/home.html
+++ b/public/home.html
@@ -55,7 +55,7 @@
         <div data-aos="fade-up"
         data-aos-anchor-placement="top-bottom"
         data-aos-offset="0"
-        data-aos-duration="1300" class="flex flex-col h-full pt-16 items-center md:justify-center md:fixed size-[50%] gap-x-10 left-[30%] top-[100px] md:top-[50px] w-full md:w-fit pb-36">
+        data-aos-duration="1300" class="flex flex-col h-full pt-4 md:pt-16 items-center md:justify-center md:fixed size-[50%] gap-x-10 left-[30%] top-[100px] md:top-[50px] w-full md:w-fit pb-36">
             <h1 class="text-left leading-tight">
                 <span id="mobin" class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
                 <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
@@ -100,7 +100,7 @@
 
     </div>
 
-    <div class="fixed bg-[#2B2A2A] md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl">
+    <div class="fixed md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl">
         <ul class="secondNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
             <a id="homeIcon" class="secondFirstHomeIcon flex justify-center items-center bg-primary rounded-2xl duration-100 size-[50px] text-[20px] relative z-50" href="home.html">
