adding-2-buttons-to-homePage

--- a/public/home.html
+++ b/public/home.html
@@ -53,25 +53,41 @@
 
         <!-- about me content -->
         <div data-aos="fade-up"
-        data-aos-anchor-placement="top-bottom"
-        data-aos-offset="0"
-        data-aos-duration="1300" class="flex flex-col h-full pt-4 md:pt-16 items-center md:justify-center md:fixed size-[50%] gap-x-10 left-[30%] top-[100px] md:top-[50px] w-full md:w-fit pb-36">
-            <h1 class="text-left leading-tight">
-                <span id="mobin" class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
-                <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
-            </h1>
-            <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
-            <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
-                MORE ABOUT ME
-            
-                <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
-                      </svg>
-                      
-                </button>
-            </a>
-        </div>
+    data-aos-anchor-placement="top-bottom"
+    data-aos-offset="0"
+    data-aos-duration="1300" 
+    class="flex flex-col h-full pt-4 md:pt-16 items-center md:justify-center md:fixed size-[50%] gap-x-10 left-[30%] top-[100px] md:top-[50px] w-full md:w-fit pb-36">
+
+    <h1 class="text-left leading-tight">
+        <span id="mobin" class="uppercase text-primary text-2xl md:text-[30px] lg:text-[40px] relative /// before:absolute before:md:block before:hidden lg:before:w-10 before:h-1 before:bg-primary before:rounded-2xl before:-left-10 before:bottom-6 before:w-7 lg:before:bottom-8 lg:before:-left-16">I'm Mobin Rezaee.</span>
+        <p class="uppercase text-left text-white text-[30px] lg:text-[40px]">web developer</p>
+    </h1>
+
+    <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+
+    <div class="flex flex-col md:flex-row h-[90px] gap-3 md:gap-x-5 items-center">
+        <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
+            ABOUT ME
+            <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+            </button>
+        </a>
+
+        <p class="text-2xl md:mx-2">or</p>
+
+        <a id="moreAboutMeBtn" class="text-center mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
+            MY PROJECTS
+            <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m12.75 15 3-3m0 0-3-3m3 3h-7.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+                </svg>
+            </button>
+        </a>
+    </div>
+</div>
+
     </div>
 
         <!-- Action Bar -->
