--- a/public/home.html
+++ b/public/home.html
@@ -11,7 +11,7 @@
 
   <title>ALONE PORTFOLIO</title>
 </head>
-<body class="bg-[#131417] text-white relative h-screen">
+<body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen">
     
     <!-- theme Button -->
      <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-12 right-5 top-5 z-50 /// flex justify-center items-center font-bold">
@@ -65,7 +65,7 @@
 
     <p class="py-3 leading-loose w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
 
-    <div class="flex flex-col md:flex-row h-[90px] gap-3 md:gap-x-5 items-center">
+    <div class="flex flex-col md:flex-row w-[400px] md:w-fit h-[300px] md:h-[90px] gap-3 md:gap-x-5 items-center">
         <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
             ABOUT ME
             <button class="bg-primary p-[13px] rounded-full absolute top-[1px] right-[0px] overflow-hidden cursor-pointer">
