or-paragraph-fixing

--- a/public/home.html
+++ b/public/home.html
@@ -75,7 +75,7 @@
             </button>
         </a>
 
-        <p class="text-2xl md:mx-2">or</p>
+        <p class="text-2xl md:mx-2 or">or</p>
 
         <a id="moreAboutMeBtn" class="text-center mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="projects.html">
             MY PROJECTS
