--- a/public/about.html
+++ b/public/about.html
@@ -145,7 +145,7 @@
               First name: <span class="text-white info">Mobin</span>
             </li>
             <li class="text-gray-300">
-              Age: <span class="text-white info">18 Years</span>
+              Age: <span class="text-white info">19 Years O ld</span>
             </li>
             <li class="text-gray-300">
               Freelance <span class="text-[#5BE85B]">Available</span>
@@ -154,7 +154,7 @@
               Phone: <span class="text-white info">+98 933 136 8903</span>
             </li>
             <li class="text-gray-300">
-              Skype: <span class="text-white info">steve.milner</span>
+              Telegram ID: <span class="text-white info">@ALONE_MOBIN</span>
             </li>
           </ul>
           <!-- second UL -->
