--- a/public/about.html
+++ b/public/about.html
@@ -130,7 +130,7 @@
 
       <div class="text-white font-poppins flex flex-col lg:flex-row justify-between items-center">
         <!-- personal infos -->
-        <div class=" flex md:flex-row flex-col gap-x-20 justify-center items-center px-10 pt-0 md:pt-5">
+        <div class=" flex md:flex-row flex-col gap-x-20 justify-center items-center px-10 pt-0 md:pt-5 md:py-0 py-28">
           <!-- first UL -->
           <ul data-aos="fade-left"
           data-aos-anchor="#example-anchor"
