nowrap-to-copy-modal

--- a/public/about.html
+++ b/public/about.html
@@ -253,7 +253,7 @@
     <div id="copyModal" class="flex justify-center items-center fixed w-full -top-[1000px] duration-500">
         <div class="w-64 h-28 relative overflow-hidden rounded-br-lg rounded-bl-lg">
             <div class="p-2 bg-white rounded-tr-lg rounded-tl-lg size-full  flex justify-center items-center">
-                <p class="pb-6">You copied the <span class="userTextCopy font-bold">00</span>.</p>
+                <p class="pb-6 whitespace-nowrap">You copied the <span class="userTextCopy font-bold">00</span>.</p>
             </div>
             <div id="copyModalBar" style="width: 0;" class="bg-green-800 h-3 absolute bottom-0"></div>
         </div>
