adding-projects-hint

--- a/public/home.html
+++ b/public/home.html
@@ -12,15 +12,6 @@
   <title>ALONE PORTFOLIO</title>
 </head>
 <body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen">
-    <!--  -->
-    <!-- <div class="flex justify-center items-center w-32 h-16 relative my-10">
-        <div class="relative bg-blue-500 w-16 h-10 rounded-full flex justify-center items-center">
-            <span class="relative bottom-[1px] text-sm">projects</span>
-            
-        </div>
-            <div class="absolute right-5 -rotate-[39deg] -bottom-1 w-0 h-0 border-13 border-solid border-transparent border-t-blue-500"></div>
-    </div> -->
-    <!--  -->
     <!-- theme Button -->
     <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-9 right-3 top-3 z-50 /// flex justify-center items-center font-bold text-white">
 
@@ -122,8 +113,14 @@
 
 
     </div>
-
-    <div class="fixed md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-40 rounded-tr-2xl rounded-tl-2xl">
+<div class="flex justify-center items-center w-fit h-16 fixed bottom-5 left-[51%] my-10 z-40 md:hidden flashy-bounce">
+        <div class="relative bg-primary w-14 border-2 border-white/50 h-8 rounded-full flex justify-center items-center">
+            <span class="relative bottom-[1px] text-[11px] font-bold select-none text-black projectsHint font-poppins">Projects</span>
+            
+        </div>
+            <div class="absolute right-[17px] rotate-[60] -bottom-[1px] w-0 h-0 border-9 border-solid border-transparent border-t-primary"></div>
+</div>
+    <div class="fixed md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-30 rounded-tr-2xl rounded-tl-2xl">
         <ul class="secondNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
             <a id="homeIcon" class="secondFirstHomeIcon flex justify-center items-center bg-primary rounded-2xl duration-100 size-[50px] text-[20px] relative z-50" href="home.html">
@@ -133,7 +130,7 @@
                 <i class="fa fa-user"></i>
             </a>
             <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
-                <i class="fa fa-briefcase"></i>
+                    <i class="fa fa-briefcase"></i>
             </a>
             <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="tools.html">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-5">
