adding-project-hints-to pc view

--- a/public/home.html
+++ b/public/home.html
@@ -61,7 +61,7 @@
         <p class="uppercase text-left text-white text-[25px] lg:text-[39px]">web developer</p>
     </h1>
 
-    <p class="py-3 leading-loose text-center w-[60%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
+    <p class="py-3 leading-loose text-left md:text-center md:w-[60%] w-[70%] text-xs font-poppins">I'm a Iranian based web designer & front‑end developer focused on crafting clean & user‑friendly experiences, I am passionate about building excellent software that improves the lives of those around me.</p>
 
     <div class="flex flex-col md:flex-row w-[400px] md:w-fit h-[250px] md:h-[90px] gap-3 md:gap-x-5 items-center">
         <a id="moreAboutMeBtn" class="text-center md:ml-10 mt-4 py-4 pl-7 pr-20 rounded-full overflow-hidden ring-1 ring-primary self-center relative z-20 /// hover:before:size-[900px] before:bg-primary before:size-0 before:absolute before:rounded-full before:-z-10 font-poppins" href="about.html">
@@ -89,7 +89,14 @@
     </div>
 
         <!-- Action Bar -->
-        <div class="md:fixed hidden md:flex justify-end items-center md:w-52 md:h-screen h-20 w-full right-5 top-0">
+        <div class="md:fixed hidden md:flex justify-end items-center md:w-52 md:h-screen relative h-20 w-full right-5 top-0">
+            <div class="md:flex hidden justify-center items-center w-24 h-16 absolute right-16 mt-24 my-10 z-40 diagonal-rotate">
+        <div class="relative bg-primary w-14 border-2 border-white/50 h-8 rounded-full flex justify-center items-center">
+            <span class="relative bottom-[1px] text-[11px] font-bold select-none text-black projectsHint font-poppins">Projects</span>
+            
+        </div>
+            <div class="absolute right-[6px] -rotate-[87deg] top-6 w-0 h-0 border-9 border-solid border-transparent border-t-primary"></div>
+            </div>
             <ul class="flex md:flex-col justify-end items-end gap-y-4 font-poppins py-5 px-4 shadow-xl rounded-2xl bg-[#222121]">
                     <a id="homeIcon" class="firstHomeIcon flex justify-center items-center bg-primary rounded-2xl duration-100 size-[50px] text-[20px] relative z-50" href="home.html">
                         <i class="fa fa-home"></i>
@@ -120,6 +127,13 @@
         </div>
             <div class="absolute right-[17px] rotate-[60] -bottom-[1px] w-0 h-0 border-9 border-solid border-transparent border-t-primary"></div>
 </div>
+<!-- <div class="md:flex hidden justify-center items-center w-24 h-16 fixed right-20 bottom-[32%] my-10 z-40 flashy-bounce">
+        <div class="relative bg-primary w-14 border-2 border-white/50 h-8 rounded-full flex justify-center items-center">
+            <span class="relative bottom-[1px] text-[11px] font-bold select-none text-black projectsHint font-poppins">Projects</span>
+            
+        </div>
+            <div class="absolute right-[5px] -rotate-90 top-6 w-0 h-0 border-9 border-solid border-transparent border-t-primary"></div>
+</div> -->
     <div class="fixed md:hidden flex justify-center items-center md:w-52 md:h-screen h-20 w-full right-0 bottom-0 z-30 rounded-tr-2xl rounded-tl-2xl">
         <ul class="secondNavBar flex md:flex-col justify-end items-center gap-x-5 bg-[#252525] px-4 py-3 rounded-2xl">
 
