updating-project-page

--- a/public/projects.html
+++ b/public/projects.html
@@ -20,8 +20,152 @@
     font-weight: 800;
 }
 
+/* Blurry Circles - Base styles for all screen sizes (desktop first approach) */
+.blurry-circle {
+    position: absolute;
+    border-radius: 50%;
+    filter: blur(150px); /* Base blur for larger screens */
+    opacity: 0.2; /* Base opacity, slightly less obtrusive */
+    z-index: -2; /* Ensures it's behind content */
+    pointer-events: none; /* Prevents circles from interfering with mouse events */
+}
+
+/* Circle 1 */
+.circle-1 {
+    width: 450px; /* Larger for desktop */
+    height: 450px;
+    top: 5%;
+    left: -15%;
+    background-color: rgba(76, 175, 80, 0.7); /* A subtle green with some transparency */
+    transform: translateZ(0); /* Improve rendering performance */
+}
+
+/* Circle 2 */
+.circle-2 {
+    width: 600px; /* Larger for desktop */
+    height: 600px;
+    top: 40%;
+    right: -20%;
+    background-color: rgba(255, 193, 7, 0.7); /* A subtle yellow/orange with transparency */
+    animation: moveCircle2 20s infinite alternate ease-in-out; /* Slower, smoother animation */
+    transform: translateZ(0); /* Improve rendering performance */
+}
+
+/* Circle 3 */
+.circle-3 {
+    width: 350px; /* Larger for desktop */
+    height: 350px;
+    bottom: -10%;
+    left: 25%;
+    background-color: rgba(33, 150, 243, 0.7); /* A subtle blue with transparency */
+    animation: moveCircle3 25s infinite alternate ease-in-out; /* Slower, smoother animation */
+    transform: translateZ(0); /* Improve rendering performance */
+}
+
+/* Animations for circles */
+@keyframes moveCircle2 {
+    0% { transform: translate(0, 0) scale(1); }
+    50% { transform: translate(-80px, 120px) scale(1.05); } /* More movement, slight scale */
+    100% { transform: translate(0, 0) scale(1); }
+}
+
+@keyframes moveCircle3 {
+    0% { transform: translate(0, 0) scale(1); }
+    50% { transform: translate(100px, -90px) scale(0.95); } /* More movement, slight scale change */
+    100% { transform: translate(0, 0) scale(1); }
+}
+
+
+/* Media Queries for responsiveness */
+
+/* For Tablets and larger phones (e.g., 768px to 1024px) */
+@media (max-width: 1024px) {
+    .blurry-circle {
+        filter: blur(100px); /* Slightly less blur */
+        opacity: 0.15; /* Slightly less opaque */
+    }
+    .circle-1 {
+        width: 350px;
+        height: 350px;
+        top: 8%;
+        left: -12%;
+    }
+    .circle-2 {
+        width: 450px;
+        height: 450px;
+        top: 45%;
+        right: -18%;
+        animation-duration: 18s; /* Slightly faster animation */
+    }
+    .circle-3 {
+        width: 280px;
+        height: 280px;
+        bottom: -8%;
+        left: 22%;
+        animation-duration: 22s; /* Slightly faster animation */
+    }
+}
+
+/* For Mobile devices (up to 767px) */
+@media (max-width: 767px) {
+    .blurry-circle {
+        filter: blur(70px); /* Even less blur for small screens */
+        opacity: 0.1; /* Even less opaque */
+    }
+    .circle-1 {
+        width: 200px;
+        height: 200px;
+        top: 10%;
+        left: -10%;
+    }
+    .circle-2 {
+        width: 300px;
+        height: 300px;
+        top: 55%;
+        right: -15%;
+        animation: none; /* Consider removing animation for very small screens */
+    }
+    .circle-3 {
+        width: 180px;
+        height: 180px;
+        bottom: 0%;
+        left: 15%;
+        animation: none; /* Consider removing animation for very small screens */
+    }
+}
+
+/* For very small screens (e.g., 320px - 480px) */
+@media (max-width: 480px) {
+    .blurry-circle {
+        filter: blur(50px);
+        opacity: 0.08;
+    }
+    .circle-1 {
+        width: 150px;
+        height: 150px;
+        top: 12%;
+        left: -8%;
+    }
+    .circle-2 {
+        width: 220px;
+        height: 220px;
+        top: 60%;
+        right: -10%;
+    }
+    .circle-3 {
+        width: 130px;
+        height: 130px;
+        bottom: 5%;
+        left: 10%;
+    }
+}
+
 </style>
-<body class="bg-[#131417] relative h-screen overflow-x-hidden">
+<body class="bg-[#131417] relative min-h-screen overflow-x-hidden">
+
+    <div class="blurry-circle circle-1"></div>
+    <div class="blurry-circle circle-2"></div>
+    <div class="blurry-circle circle-3"></div>
 
      <!-- theme Button -->
     <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-9 right-3 top-3 z-50 /// flex justify-center items-center font-bold text-white">
